Spacing issue fixed

--- a/css/main.scss
+++ b/css/main.scss
@@ -72,13 +72,7 @@
 }
 
 
-@media
-only screen and (-webkit-min-device-pixel-ratio: 1.5),
-only screen and (-o-min-device-pixel-ratio: 3/2),
-only screen and (min--moz-device-pixel-ratio: 1.5),
-only screen and (min-device-pixel-ratio: 1.5){
 
-  html,
   body{
     width:  100%;
     height: 100%;
@@ -87,7 +81,7 @@ only screen and (min-device-pixel-ratio: 1.5){
     overflow-x: hidden; 
 }
 
-}
+
 
 .bgcolor{
     background-color: rgb(12, 16, 24);
